Fix layout bug in overview panel

--- a/AcornSat.Visualiser/Shared/OverviewField.razor.css
+++ b/AcornSat.Visualiser/Shared/OverviewField.razor.css
@@ -2,7 +2,7 @@
     margin-top: 8px;
     margin-bottom: 8px;
     min-width: 150px;
-    margin-right: 20px;
+    margin-right: 10px;
     display: inline-block;
     vertical-align: top;
 }
